2009-11-17  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Pavel Feldman.

        Skip inspector tests that are flaky on Windows Release - this is being tracked by:
        https://bugs.webkit.org/show_bug.cgi?id=31596.

        * platform/win/Skipped:

2009-11-16  Julie Parent  <jparent@chromium.org>

        Reviewed by Darin Adler.

        Eliminate flakiness in char-encoding tests by removing setTimeout,
        that was working around an old issue.
        https://bugs.webkit.org/show_bug.cgi?id=31571

        * fast/encoding/char-encoding-mac.html:
        * fast/encoding/char-encoding.html:
        * fast/encoding/resources/char-encoding-utils.js:

2009-11-17  Csaba Osztrogonác  <ossy@webkit.org>

        Not reviewed, follow up to r51072: rename skipped entries
        * platform/qt/Skipped:

2009-11-17  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Crashing tests after updating to Qt-4.6.0
        https://bugs.webkit.org/show_bug.cgi?id=31591

        * platform/qt/Skipped: Put tests into skiplist temporarily.

2009-11-17  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed, tests fix. Follow up to r51072: move
        platform-specific results for fast/inspector into
        fast/inspector-support.

        * platform/mac/fast/inspector-support/matchedrules-expected.checksum: Renamed from LayoutTests/platform/mac/fast/inspector/matchedrules-expected.checksum.
        * platform/mac/fast/inspector-support/matchedrules-expected.png: Renamed from LayoutTests/platform/mac/fast/inspector/matchedrules-expected.png.
        * platform/mac/fast/inspector-support/matchedrules-expected.txt: Renamed from LayoutTests/platform/mac/fast/inspector/matchedrules-expected.txt.
        * platform/mac/fast/inspector-support/style-expected.txt: Renamed from LayoutTests/platform/mac/fast/inspector/style-expected.txt.