@@ -1,0 +1,5 @@
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+<p>FAILED: The WebSocket server failed to start so the test could not be run.</p>
